12/21/08 - #1014, use new resistor image created by Noah P.
# 2.01.03 (26579) 12/04/08
12/4/08 - add "EMF scale" dev control to make it easier to calibrate after #721
12/4/08 - fix #721, use "effective area" of coil when computing emf
12/4/08 - add constants for developer controls, to make future adjustments easier
12/4/08 - change name of "pickup fudge factor" to "pickup transition smoothing scale", add tooltip to dev control
# 2.01.02 (26353) 11/19/08
11/19/08 - fix #744, voltmeter needle exhibits big jumps in Transformer panel
11/5/08 - see #744, add display of "average Bx" to developer control in FluxDisplayGraphic
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 794
# 2.01.01 (24585)
9/18/08 - update compass while clock is paused (Unfuddle #711)
5/20/08 - replace new Font("Sans Serif",...) with new PhetFont(...)
5/8/08 - fix translations (ar,es,lt) that were using obsolete MessageFormat syntax
# 2.01.00 (21052)
# 2.00.04 (21033)
4/28/08 - add PhetLookAndFeel to mains
4/28/08 - pick up PhetDefaultFont fixes
4/14/08 - restore "Show Field" and "Show Electrons" features that were hidden for 2.00.01, 2.00.02 and 2.00.03
# 2.00.03 (20727)
4/14/08 - hide "Show Field" and "Show Electrons" features (for Archie's studies)
# 2.00.02 (20725)
4/14/08 - show "Show Field" feature, hide "Show Electrons" feature (for Archie's studies)
# 2.00.01 (20722)
4/14/08 - hide "Show Field" feature (for Archie's studies)
4/14/08 - add compile-time flags to hide "Show Field" and "show Electrons" features (for Archie's studies)
4/14/08 - set B-field to "off" by default in GeneratorModule.reset
4/14/08 - add missing call to reset() at end of constructor for GeneratorModule
# 2.00.00 (20682)
4/10/08 - fix "see inside" feature to handle magnet rotation that occurs with "show Earth"
# 1.05.15 (20599)
4/8/09 - strength slider for bar magnet and turbine both need to be constrained to integer values [504]