@@ -73,6 +73,7 @@ public class TransformerModule extends FaradayModule {
     private static final double LIGHT_RAYS_SCALE = 10.0;
     private static final double VOLTMETER_SCALE = 12.0;
     private static final double ELECTRON_SPEED_SCALE = VOLTMETER_SCALE;
+    private static final double PICKUP_COIL_EMF_SCALE = 3.0;
     
     //----------------------------------------------------------------------------
     // Instance data
@@ -166,6 +167,7 @@ public class TransformerModule extends FaradayModule {
         _pickupCoilModel.setDirection( PICKUP_COIL_DIRECTION );
         _pickupCoilModel.setLocation( PICKUP_COIL_LOCATION);
         _pickupCoilModel.setTransitionSmoothingScale( PICKUP_COIL_TRANSITION_SMOOTHING_SCALE );
+        _pickupCoilModel.setEmfScale( PICKUP_COIL_EMF_SCALE );
         final double ySpacing = _electromagnetModel.getHeight() / 20;
         _pickupCoilModel.setSamplePointsStrategy( new VariableNumberOfSamplePointsStrategy( ySpacing ) );
         model.addModelElement( _pickupCoilModel );
@@ -261,7 +263,7 @@ public class TransformerModule extends FaradayModule {
             controlPanel.addControlFullWidth( _pickupCoilPanel );
             
             // Scaling calibration
-            if ( PhetApplication.instance().isDeveloperControlsEnabled() ) {
+            if ( PhetApplication.getInstance().isDeveloperControlsEnabled() ) {
                 controlPanel.addVerticalSpace( FaradayControlPanel.DEFAULT_VERTICAL_SPACE );
                 
                 DeveloperControlsPanel developerControlsPanel = new DeveloperControlsPanel( 
