@@ -1,3 +1,4 @@
+2/17/09 - #721, calibrate emf scale using Kathy's values
 12/21/08 - #1014, use new resistor image created by Noah P.
 # 2.01.03 (26579) 12/04/08
 12/4/08 - add "EMF scale" dev control to make it easier to calibrate after #721
